--- a/src/scss/components/_tabs.scss
+++ b/src/scss/components/_tabs.scss
@@ -153,7 +153,7 @@
 
       // Glow line under active tab
       &::after {
-        content: '';
+        content: "";
         position: absolute;
         right: 0;
         bottom: -1px;
