--- a/src/scss/effects/_index.scss
+++ b/src/scss/effects/_index.scss
@@ -2,8 +2,8 @@
 // Effects - Visual FX modules
 // ============================================================
 
-@forward 'noise';
-@forward 'scanlines';
-@forward 'glitch';
-@forward 'neon-border';
-@forward 'datastream';
+@forward "noise";
+@forward "scanlines";
+@forward "glitch";
+@forward "neon-border";
+@forward "datastream";
