--- a/src/scss/utilities/_index.scss
+++ b/src/scss/utilities/_index.scss
@@ -2,10 +2,10 @@
 // Utilities - Forward all utility modules
 // ============================================================
 
-@forward 'display';
-@forward 'flex';
-@forward 'grid';
-@forward 'spacing';
-@forward 'text';
-@forward 'accessibility';
-@forward 'animation';
+@forward "display";
+@forward "flex";
+@forward "grid";
+@forward "spacing";
+@forward "text";
+@forward "accessibility";
+@forward "animation";
