--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -3,16 +3,16 @@
 // Forward all component modules
 // ============================================================
 
-@forward 'buttons';
-@forward 'cards';
-@forward 'inputs';
-@forward 'progress';
-@forward 'badges';
-@forward 'alerts';
-@forward 'tables';
-@forward 'nav';
-@forward 'tabs';
-@forward 'modal';
-@forward 'terminal';
-@forward 'spinner';
-@forward 'skeleton';
+@forward "buttons";
+@forward "cards";
+@forward "inputs";
+@forward "progress";
+@forward "badges";
+@forward "alerts";
+@forward "tables";
+@forward "nav";
+@forward "tabs";
+@forward "modal";
+@forward "terminal";
+@forward "spinner";
+@forward "skeleton";
