--- a/src/scss/core/_index.scss
+++ b/src/scss/core/_index.scss
@@ -1,6 +1,6 @@
 // Core module index - import all core styles
-@forward 'layers';
-@forward 'variables';
-@forward 'reset';
-@forward 'base';
-@forward 'typography';
+@forward "layers";
+@forward "variables";
+@forward "reset";
+@forward "base";
+@forward "typography";
