--- a/src/scss/core/_reset.scss
+++ b/src/scss/core/_reset.scss
@@ -95,19 +95,19 @@
   }
 
   // Remove spinner from number inputs
-  input[type='number']::-webkit-inner-spin-button,
-  input[type='number']::-webkit-outer-spin-button {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
     margin: 0;
     appearance: none;
   }
 
-  input[type='number'] {
+  input[type="number"] {
     appearance: textfield;
   }
 
   // Remove clear button from search inputs
-  input[type='search']::-webkit-search-cancel-button,
-  input[type='search']::-webkit-search-decoration {
+  input[type="search"]::-webkit-search-cancel-button,
+  input[type="search"]::-webkit-search-decoration {
     appearance: none;
   }
 
