--- a/src/scss/effects/_noise.scss
+++ b/src/scss/effects/_noise.scss
@@ -12,7 +12,7 @@
 
     // SVG noise filter embedded as data URI
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise' x='0' y='0'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E");
       background-repeat: repeat;
