--- a/src/scss/effects/_scanlines.scss
+++ b/src/scss/effects/_scanlines.scss
@@ -11,7 +11,7 @@
     inset: 0;
 
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       background: repeating-linear-gradient(
         0deg,
